tests/ui/invalid-self-argument/bare-fn-start.stderr
error: `self` parameter is only allowed in associated functions
  --> $DIR/bare-fn-start.rs:1:6
   |
LL | fn a(&self) { }
   |      ^^^^^ not semantically valid as function parameter
   |
   = note: associated functions are those in `impl` or `trait` definitions

error: aborting due to 1 previous error

